作业提交 This reverts commit a4966a5

--- a/uri/home.html
+++ b/uri/home.html
@@ -46,27 +46,27 @@
 
       <!-- Unnamed (Text Field) -->
       <div id="u4" class="ax_default text_field">
-        <input id="u4_input" type="text" value=""/>
+        <input id="u4_input" type="text" value="15111212"/>
       </div>
 
       <!-- Unnamed (Text Field) -->
       <div id="u5" class="ax_default text_field">
-        <input id="u5_input" type="text" value="借阅时长"/>
+        <input id="u5_input" type="text" value="书籍名字"/>
       </div>
 
       <!-- Unnamed (Text Field) -->
       <div id="u6" class="ax_default text_field">
-        <input id="u6_input" type="text" value=""/>
+        <input id="u6_input" type="text" value="盛大的"/>
       </div>
 
       <!-- Unnamed (Text Field) -->
       <div id="u7" class="ax_default text_field">
-        <input id="u7_input" type="text" value="起始时间"/>
+        <input id="u7_input" type="text" value="用户id"/>
       </div>
 
       <!-- Unnamed (Text Field) -->
       <div id="u8" class="ax_default text_field">
-        <input id="u8_input" type="text" value=""/>
+        <input id="u8_input" type="text" value="5451"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -79,12 +79,32 @@
 
       <!-- Unnamed (Text Field) -->
       <div id="u10" class="ax_default text_field">
-        <input id="u10_input" type="text" value="备注"/>
+        <input id="u10_input" type="text" value="借阅时间"/>
       </div>
 
       <!-- Unnamed (Text Field) -->
       <div id="u11" class="ax_default text_field">
-        <input id="u11_input" type="text" value=""/>
+        <input id="u11_input" type="text" value="一个日期选择框"/>
+      </div>
+
+      <!-- Unnamed (Text Field) -->
+      <div id="u12" class="ax_default text_field">
+        <input id="u12_input" type="text" value="归还时间"/>
+      </div>
+
+      <!-- Unnamed (Text Field) -->
+      <div id="u13" class="ax_default text_field">
+        <input id="u13_input" type="text" value="一个日期选择框"/>
+      </div>
+
+      <!-- Unnamed (Text Field) -->
+      <div id="u14" class="ax_default text_field">
+        <input id="u14_input" type="text" value="备注"/>
+      </div>
+
+      <!-- Unnamed (Text Field) -->
+      <div id="u15" class="ax_default text_field">
+        <input id="u15_input" type="text" value="text area"/>
       </div>
     </div>
   </body>
